# flightgearInterpreter

./: AssignmentCommand.h  BinaryExpression.h  BooleanExpression.h  CMakeLists.txt  Command.h  ConditionCommand.h  ConditionParser.h  ConditionalExpression.h  ConnectCommand.h  DataReaderServer.cpp  DataReaderServer.h  DataServer.cpp  DataServer.h  DataWriterClient.cpp  DataWriterClient.h  DemoCommand.cpp  DemoCommand.h  Div.h  Equals.h  ExitCommand.h  Expression.cpp  Expression.h  Greater.h  GreaterEquals.h  IfCommand.h  IfExpression.h  Lesser.h  LesserEquals.h  Lexer.cpp  Lexer.h  Minus.h  Multi.h  NaryExpression.h  Neg.h  NotEquals.h  Num.h  OpenDataServer.h  Parser.cpp  Parser.h  Plus.h  (+20 more)
Commands/: AssignmentCommand.h  Command.h  ConditionCommand.h  ConnectCommand.h  OpenDataServer.h  PrintExpressionCommand.h  PrintStringCommand.h  SleepCommand.h  VarCommand.h  WhileCommand.h
Expressions/: BinaryExpression.h  Div.h  Expression.h  Greater.h  GreaterEquals.h  Multi.h  Neg.h  NotEquals.h  Num.h  UnaryExpression.h  Var.h
TCPconnection/: DataServer.h  DataWriterClient.cpp  DataWriterClient.h  TcpServer.h
Utilities/: ShuntingYard.h  Utils.h
interpreter/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SymbolsTable.h
